# amyspeak

./: CMakeLists.txt  README.md  patterns  tokens
inc/: init.h  log.h  modes.h  patterns.h  processing.h  tokens.h  util.h  version.h
src/: init.cpp  log.cpp  main.cpp  modes.cpp  patterns.cpp  processing.cpp  tokens.cpp  util.cpp
